# risk-pattern-analysis-genai

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: sample_signups.csv
docs/: portfolio-version.md  project-summary.md  resume-entry.md
scripts/: run_pipeline.sh
src/risk_pattern_analysis/: __init__.py  cli.py  feature_engineering.py  pipeline.py  rule_generator.py  scoring.py
